Creadas las migas de pan tanto en la pagina de de inicio como para la pagina de detalle con marcado de datos (microdata).

--- a/detail.html
+++ b/detail.html
@@ -74,7 +74,21 @@
             <div class="row">
                 <div class="col-xs-12">
                     <header class="header">
-                        <h1 class="title">With Dodgers, Dave Roberts Has Another Chance to Haunt the Yankees</h1>
+						<ol class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList"> <!-- breadcrumb es una clase de bootstrap-->
+							<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+								<a itemprop="item" href="index.html">
+									<span itemprop="name">Inicio</span>
+								</a>
+								<meta itemprop="position" content="1" />
+							</li>
+							<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+								<a itemprop="item" href="detail.html">
+									<span itemprop="name">Dave Roberts Has Another Chance</span>
+								</a>
+								<meta itemprop="position" content="2" />
+							</li>
+						</ol>
+						<h1 class="title">With Dodgers, Dave Roberts Has Another Chance to Haunt the Yankees</h1>
                     </header>
                 </div>
                 <div class="col-xs-12 col-xs-p-0">
