--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 <main>
     <div class="container">
         <section class="articles">
+            <ol class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList"> <!-- breadcrumb es una clase de bootstrap-->
+                <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+                    <a itemprop="item" href="index.html">
+                        <span itemprop="name">Inicio</span>
+                    </a>
+                    <meta itemprop="position" content="1" />
+                </li>
+            </ol>
 
             <article class="article">
                 <div class="row">
