Cambios minusculos en los archivos. Cambio el content del breadcrumb para que en vez de '/' salga '>'

--- a/detail.html
+++ b/detail.html
@@ -74,16 +74,16 @@
             <div class="row">
                 <div class="col-xs-12">
                     <header class="header">
-						<ol class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList"> <!-- breadcrumb es una clase de bootstrap-->
+						<ol class="breadcrumb hidden-sm-down" itemscope itemtype="http://schema.org/BreadcrumbList"> <!-- breadcrumb es una clase de bootstrap-->
 							<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-								<a itemprop="item" href="index.html">
-									<span itemprop="name">Inicio</span>
+								<a itemprop="url" href="index.html">
+									<span itemprop="title">Inicio</span>
 								</a>
 								<meta itemprop="position" content="1" />
 							</li>
-							<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-								<a itemprop="item" href="detail.html">
-									<span itemprop="name">Dave Roberts Has Another Chance</span>
+							<li class="active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+								<a itemprop="url" href="detail.html">
+									<span itemprop="title">Dave Roberts Has Another Chance</span>
 								</a>
 								<meta itemprop="position" content="2" />
 							</li>
