--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section class="articles">
             <ol class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList"> <!-- breadcrumb es una clase de bootstrap-->
                 <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-                    <a itemprop="item" href="index.html">
+                    <a itemprop="url" href="index.html">
                         <span itemprop="name">Inicio</span>
                     </a>
                     <meta itemprop="position" content="1" />
