Corrijo el uso del itemprop para tener la práctica apta

--- a/detail.html
+++ b/detail.html
@@ -77,13 +77,13 @@
 						<ol class="breadcrumb hidden-sm-down" itemscope itemtype="http://schema.org/BreadcrumbList"> <!-- breadcrumb es una clase de bootstrap-->
 							<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
 								<a itemprop="url" href="index.html">
-									<span itemprop="title">Inicio</span>
+									<span itemprop="name">Inicio</span>
 								</a>
 								<meta itemprop="position" content="1" />
 							</li>
 							<li class="active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
 								<a itemprop="url" href="detail.html">
-									<span itemprop="title">Dave Roberts Has Another Chance</span>
+									<span itemprop="name">Dave Roberts Has Another Chance</span>
 								</a>
 								<meta itemprop="position" content="2" />
 							</li>
